--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@grapecity/activereports-react": "^4.1.0",
+    "@grapecity/activereports-react": "latest",
+    "@grapecity/activereports-localization": "latest",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -13,6 +14,11 @@
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
+  },
+  "devDependencies": {
+    "systemjs": "0.19.40",
+    "systemjs-plugin-babel": "0.0.25",
+    "systemjs-plugin-css": "0.1.37"
   },
   "scripts": {
     "start": "react-scripts --max_old_space_size=8192 start",
