--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@grapecity/activereports-react": "latest",
     "@grapecity/activereports-localization": "latest",
+    "@grapecity/activereports-react": "latest",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.2",
     "file-saver": "^2.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -18,7 +19,9 @@
   "devDependencies": {
     "systemjs": "0.19.40",
     "systemjs-plugin-babel": "0.0.25",
-    "systemjs-plugin-css": "0.1.37"
+    "systemjs-plugin-css": "0.1.37",
+    "tailwindcss": "^3.3.5",
+    "@babel/plugin-transform-private-property-in-object": "^7.23.3"
   },
   "scripts": {
     "start": "react-scripts --max_old_space_size=8192 start",
